# Hamzstlab-Mathematics

./: README.md  hamzstlab_firstorderdifferentialequations.cpp  hamzstlab_rootfinding.cpp  pushgit
examples/3D Demo/: Makefile  imgui.ini  main.cpp
examples/3D Test/: Makefile  imgui.ini  main.cpp
examples/First Order Differential Equation/: Makefile  imgui.ini  main.cpp
examples/ImNodes Test/: Makefile  imgui.ini  main.cpp
examples/ImplotDemo/: Makefile  imgui.ini
examples/PilotProject/: Makefile  imgui.ini  main.cpp
examples/Root Finding/: Makefile  main.cpp
implot-demos/: CMakeLists.txt
implot-demos/common/: App.cpp
